--- a/style.css
+++ b/style.css
@@ -603,6 +603,8 @@ a#close {
   line-height: 25px;
 }
 /* blog page */
+/* blog page */
+/* blog page */
 
 .blog-header {
   background-image: url(img/banner/b19.jpg);
